--- a/src/css/input.css
+++ b/src/css/input.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.wrapper{
+    @apply w-[90%] mx-auto max-w-screen-xl overflow-hidden
+}
